@startuml uml

class Frame {

    View view
    StatusBar statusBar

}

class StatusBar {
    View view
}

class View {
    Frame frame
    Figure figure
    List<Figure> figures
    Mode mode

}

abstract class Mode {
    View view
    boolean isPopupOpen
    RightClickPopup menu
}

class MovingMode extends Mode {
}

class DrawingMode extends Mode {
}

abstract class RightClickPopup {
}
class OnCanvasPopup extends RightClickPopup {
}
class OnFigurePopup extends RightClickPopup {
}

abstract class Figure {
    int x1, y1, x2, y2
    Color color
    Polygon polygon
}
abstract class OnePointFigure extends Figure {
}
abstract class TwoPointFigure extends Figure {
}
class Line extends TwoPointFigure {
}
class Box extends TwoPointFigure {
}
class Circle extends TwoPointFigure {
}

class FigureDialog {
    View view
}

Frame --* StatusBar
Frame ..> FigureDialog

View --* Frame
View --* Figure
View --* Mode 

DrawingMode --* RightClickPopup
MovingMode --* RightClickPopup

Figure ..> FigureCalc



@enduml